# antikythera

./: .gitignore  Cargo.toml  README.md
.github/: copilot-instructions.md
antikythera/: Cargo.toml
antikythera-cli/: Cargo.toml
antikythera-cli/src/: main.rs
antikythera-gui/: Cargo.toml
antikythera-gui/src/: app.rs  main.rs
antikythera-gui/src/app/: analysis.rs  scripting.rs  simulation.rs  state_editor.rs
antikythera-gui/src/app/analysis/: scripting.rs
antikythera-gui/src/app/scripting/: analysis.rs  simulation.rs
antikythera-gui/test-lua/: hook_avg_turns.lua  query_hero_alive.lua
antikythera/src/: lib.rs  roll_parser.rs  simulation.rs  statistics.rs  utils.rs
antikythera/src/rules/: actions.rs  actor.rs  damage.rs  death.rs  dice.rs  items.rs  saves.rs  spells.rs
antikythera/src/simulation/: action_evaluator.rs  executor.rs  hook.rs  integration.rs  logging.rs  policy.rs  query.rs  roller.rs  state.rs  state_tree.rs  transition.rs
antikythera/src/statistics/: hit_model.rs  hook.rs  integration.rs  pmf.rs  query.rs  roller.rs  state_tree.rs
src/: main.rs  rules.rs  statistics.rs  utils.rs
src/rules/: actions.rs  actor.rs  death.rs  dice.rs  items.rs  saves.rs  skills.rs  spells.rs  stats.rs
src/simulation/: action_evaluator.rs  executor.rs  logging.rs  policy.rs  state.rs  transition.rs
src/statistics/: hit_model.rs  query.rs  roller.rs
