[package]
name = "antikythera"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.42"
derive_more = { version = "2.0.1", features = ["full"] }
env_logger = "0.11.8"
log = "0.4.28"
mlua = { version = "0.11.3", features = ["lua54"] }
rand = "0.9.2"
rand_distr = "0.5.1"
rustc-hash = "2.1.1"
serde = { version = "1.0.226", features = ["derive"] }
statrs = "0.18.0"
thiserror = "2.0.16"
