[package]
name = "antikythera-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
antikythera = { path = "../antikythera" }
clap = { version = "4.5.48", features = ["derive"] }
anyhow = "1.0.100"
log = "0.4.28"
env_logger = "0.11.8"
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.145"
chrono = "0.4.42"
