[package]
name = "antikythera-gui"
version = "0.1.0"
edition = "2024"

[dependencies]
antikythera = { path = "../antikythera" }
chrono = "0.4.42"
eframe = "0.32.3"
egui_extras = "0.32.3"
env_logger = "0.11.8"
log = "0.4.28"
rfd = "0.15.4"
serde = "1.0.227"
serde_json = "1.0.145"
mlua = { version = "0.11.3", features = ["lua54", "vendored", "serde", "anyhow"] }
anyhow = "1.0.100"
petgraph = "0.8.2"
