[package]
name = "antikythera-gui"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
antikythera = { path = "../antikythera" }
chrono = { version = "0.4.26", features = ["serde"] }
eframe = "0.32.3"
egui_extras = "0.32.3"
env_logger = "0.11.8"
log = "0.4.28"
rfd = "0.15.4"
serde = "1.0.227"
serde_json = "1.0.145"
mlua = { version = "0.11.3", features = ["lua54", "vendored", "serde", "anyhow", "send"] }
anyhow = "1.0.100"
crossbeam-channel = "0.5.15"
egui_json_tree = "0.13.0"
egui_code_editor = "0.2.17"
