[package]
name = "antikythera"
version = "0.1.0"
edition = "2024"

[lib]
name = "antikythera"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.100"
chrono = { version = "0.4.26", features = ["serde"] }
derive_more = { version = "2.0.1", features = ["full"] }
log = "0.4.28"
nom = "8.0.0"
petgraph = { version = "0.8.2", features = ["serde-1"] }
rand = "0.9.2"
rand_distr = "0.5.1"
rustc-hash = "2.1.1"
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.16"
unicode-width = "0.2.1"
